filter_macros/tests/try/err/unnamed_fields.stderr
error: `Query` derive requires a struct with named fields
 --> tests/try/err/unnamed_fields.rs:5:13
  |
5 | pub struct T(String, i32);
  |             ^^^^^^^^^^^^^
