filter_macros/tests/try/err/unnamed_fields.rs
use filter_macros::Query;
use sqlx::FromRow;

#[derive(Debug, FromRow, Query)]
pub struct T(String, i32);

fn main() {}
